# mini_trainer

./: Readme.md  batch_metrics.py  batch_packer.py  data-formatting.ipynb  incremental-train.sh  make_messages.py  none_reduction_losses.py  process_data.py  pyproject.toml  requirements.txt  sampler.py  setup_model_for_training.py  svd_utils.py  test-vector-projection.py  tox.ini  train.py  utils.py
research_scratch/: fsdp1_dummy_script.py  fsdp1_wrapper.py  sequence_length_experiment.py
tests/: README.md  __init__.py  run_tests.py  test_async_logger.py  test_batch_lengths_to_minibatches.py  test_data_loader.py  test_epoch_tracking.py  test_integration_small_models.py  test_model_initialization.py  test_training_components.py  test_training_loop.py
tutorials/: tensor_paralleism_getting_started.py
